# Midas

./: .env.example  .env.sample  .gitignore  CLAUDE.md  README.md  TODO.md  pyproject.toml
.claude/: settings.json
.claude/agents/: code-executor.md  devops-mcp-engineer.md  pytest-suite-guardian.md
.claude/commands/: lint.md  test.md
.claude/context/: data-format.md  development.md  project-structure.md
.github/workflows/: ci.yml
data/: .gitignore
data/sample/: accounts.csv  holdings.csv  transactions.csv
midas/calculators/: budget_models.py  net_worth.py
midas/loaders/: plaid_loader.py
midas/models/: account.py  holding.py
scripts/: import_data.py
src/: server.py  usage_logger.py  validators.py
src/calculators/: budget.py  budget_models.py  debt_payoff.py  performance.py  savings_rate.py  spending_trends.py
src/importers/: __init__.py  base.py  capital_one.py  chase.py  fidelity.py  pdf_extractor.py  vanguard.py
src/loaders/: __init__.py  base.py  capital_one_loader.py  composite_loader.py  csv_loader.py  fidelity_loader.py  parsing.py  plaid_loader.py  qfx_loader.py  vanguard_loader.py
tests/: conftest.py  test_calculators_budget.py  test_calculators_net_worth.py  test_calculators_performance.py  test_debt_payoff.py  test_importers.py  test_loaders.py  test_loaders_capital_one.py  test_loaders_composite.py  test_loaders_fidelity.py  test_loaders_parsing.py  test_loaders_qfx.py  test_loaders_vanguard.py  test_models.py  test_savings_rate.py  test_server.py  test_spending_trends.py  test_usage_logger.py  test_validators.py
(+38 files in other folders)
