[project]
name = "midas"
version = "0.1.0"
description = "Personal finance MCP server — net worth, budgets, brokerage performance"
requires-python = ">=3.11"
dependencies = [
    "mcp[cli]>=1.0.0",
]

[project.scripts]
midas = "midas.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["midas"]
